--- a/.travis.yml
+++ b/.travis.yml
@@ -14,29 +14,25 @@ cache:
 
 jobs:
   include:
-#    - stage: build
-#      name: "Build Angular App"
-#      script: './scripts/ci/build-ng.sh'
-#    - # parallel run
-#      name: "Build Electron App"
-#      script: './scripts/ci/build-electron.sh'
-#    - stage: test
-#      name: "Run BurstJS Tests"
-#      script: './scripts/ci/test-burstjs.sh'
-#    - # parallel run
-#      name: "Run Angular Tests"
-#      script: './scripts/ci/test-ng.sh'
+    - stage: prepare
+      name: "Run BurstJS Tests"
+      script: './scripts/ci/test-burstjs.sh'
+    - # parallel run
+      name: "Run Angular Tests"
+      script: './scripts/ci/test-ng.sh'
+    - # parallel run
+      name: "Build App"
+      script: './scripts/ci/build-electron.sh'
     - stage: deploy
       name: "Build and Deploy Desktop App"
       script: './scripts/ci/release-desktop.sh'
-    - stage: deploy-force
+    - stage: force-deploy
       name: "Forced Build and Deploy Desktop App"
       script: './scripts/ci/release-desktop.sh --publish'
     - stage: nightly-release
       name: "Nightly Release of Desktop App"
       script: './scripts/ci/nightly-desktop.sh'
       before_deploy:
-        # Set up git user name and tag this commit
         - git config --local user.name $GIT_NAME
         - git config --local user.email $GIT_EMAIL
         - export TRAVIS_TAG=nightly
@@ -46,21 +42,20 @@ jobs:
         api_key: $GH_TOKEN
         file_glob: true
         file:
-#          - /desktop/wallet/release-builds/latest*
+          - /desktop/wallet/release-builds/latest*
           - /desktop/wallet/release-builds/Phoenix*
           - /desktop/wallet/release-builds/phoenix*
         skip_cleanup: true
-        overwrite: false
+        overwrite: true
         on:
           branch: develop
           condition: $TRAVIS_TAG=nightly
 
 stages:
-  - build
-  - test
+  - prepare
   - name: deploy
     if: tag=~/^v\d+\.\d+\.\d+/
-  - name: deploy-force
+  - name: force-deploy
     if: branch=~/^force-deploy/
-  - name: nightly-release
-    if: (branch=develop) AND (tag IS blank)
+#  - name: nightly-release
+#    if: (branch=develop) AND (tag IS blank)
