--- a/.travis.yml
+++ b/.travis.yml
@@ -29,27 +29,9 @@ jobs:
     - stage: force-deploy
       name: "Forced Build and Deploy Desktop App"
       script: './scripts/ci/release-desktop.sh --publish'
-#    - stage: nightly-release
-#      name: "Nightly Release of Desktop App"
-#      script: './scripts/ci/nightly-desktop.sh'
-#      before_deploy:
-#        - git config --local user.name $GIT_NAME
-#        - git config --local user.email $GIT_EMAIL
-#        - export TRAVIS_TAG=nightly
-#        - git tag $TRAVIS_TAG --force
-#      deploy:
-#        provider: releases
-#        api_key: $GH_TOKEN
-#        file_glob: true
-#        file:
-#          - /desktop/wallet/release-builds/latest*
-#          - /desktop/wallet/release-builds/Phoenix*
-#          - /desktop/wallet/release-builds/phoenix*
-#        skip_cleanup: true
-#        overwrite: true
-#        on:
-#          branch: develop
-#          condition: $TRAVIS_TAG=nightly
+    - stage: nightly-release
+      name: "Nightly Release of Desktop App"
+      script: './scripts/ci/nightly-desktop.sh'
 
 stages:
   - prepare
@@ -57,5 +39,5 @@ stages:
     if: tag=~/^v\d+\.\d+\.\d+/
   - name: force-deploy
     if: branch=~/^force-deploy/
-#  - name: nightly-release
-#    if: (branch=develop) AND (tag IS blank)
+  - name: nightly-release
+    if: (branch=develop) AND (env(TRAVIS_EVENT_TYPE)=cron)
