--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,8 +1,9 @@
 {
   "name": "mobile",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "contributors": [
-    "titanishu"
+    "titanishu",
+    "blankey1337"
   ],
   "repository": {
     "type": "git",
@@ -32,17 +33,16 @@
     "@burstjs/crypto": "^0.1.1",
     "@burstjs/http": "^0.1.1",
     "@burstjs/util": "^0.1.1",
-    "axios": "^0.18.0",
-    "i18n-js": "^3.1.0",
+    "i18n-js": "^3.2.2",
     "lodash": "^4.17.11",
-    "react": "16.6.3",
-    "react-native": "0.57.8",
-    "react-native-gesture-handler": "^1.0.17",
+    "react": "16.8.3",
+    "react-native": "0.59.8",
+    "react-native-gesture-handler": "^1.2.1",
     "react-native-keychain": "^3.1.2",
-    "react-native-languages": "^3.0.2",
+    "react-native-localize": "^1.1.2",
     "react-native-touch-id": "^4.4.1",
     "react-navigation": "^3.9.1",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -52,9 +52,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "7.4.4",
+    "@babel/runtime": "7.4.4",
     "@types/i18n-js": "^3.0.1",
     "@types/jest": "^24.0.12",
-    "@types/lodash": "^4.14.124",
+    "@types/lodash": "^4.14.125",
     "@types/react": "^16.8.17",
     "@types/react-native": "^0.57.53",
     "@types/react-native-dotenv": "^0.2.0",
@@ -65,9 +67,8 @@
     "babel-jest": "24.8.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.0",
-    "react-addons-test-utils": "^15.6.2",
     "react-native-dotenv": "^0.2.0",
-    "react-test-renderer": "16.8.6",
+    "react-test-renderer": "16.8.3",
     "sort-json": "^2.0.0",
     "ts-jest": "^24.0.2",
     "tslint": "^5.16.0",
