established ipc connection between main and render thread

--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -73,6 +73,7 @@
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "7.5.0",
     "ngx-cookie-service": "2.1.0",
+    "ngx-electron": "^2.1.1",
     "ngx-mask": "^7.9.9",
     "particles.js": "^2.0.0",
     "perfect-scrollbar": "1.4.0",
@@ -93,6 +94,7 @@
     "@types/dragula": "^2.1.34",
     "@types/node": "~12.0.0",
     "codelyzer": "~5.0.1",
+    "electron": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.8.0",
