--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -41,7 +41,8 @@
     "ajv": "^6.10.0",
     "cross-env": "^5.2.0",
     "electron": "^5.0.1",
-    "electron-builder": "^20.40.2"
+    "electron-builder": "^20.40.2",
+    "jest": "^24.8.0"
   },
   "update": {
     "repositoryRootUrl": "https://api.github.com/repos/burst-apps-team/phoenix",
@@ -100,6 +101,7 @@
   "dependencies": {
     "@burstjs/http": "^0.1.1",
     "js-yaml": "^3.13.1",
+    "lodash": "^4.17.11",
     "semver": "^6.0.0"
   }
 }
