--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -5,7 +5,7 @@
     "email": "contact@burst-coin.org"
   },
   "productName": "Phoenix BURST Wallet",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0-beta.5",
   "contributors": [
     "ohager",
     "blankey1337"
@@ -29,7 +29,7 @@
     "build": "node ../../scripts/build.js --target desktop",
     "start": "cross-env NODE_ENV=develop && npm run build && electron .",
     "start:fast": "cross-env NODE_ENV=develop && electron .",
-    "pack": "npm run build && electron-builder -p 'never' --config electron-builder.json",
+    "pack": "rimraf -rf ./release-builds && npm run build && electron-builder -p 'never' --config electron-builder.json",
     "release:all": "npm run pack -- -wml",
     "release:linux": "npm run pack -- -l",
     "release:win32": "npm run pack -- -w",
@@ -41,6 +41,23 @@
     "ajv": "^6.10.0",
     "cross-env": "^5.2.0",
     "electron": "^5.0.1",
-    "electron-builder": "^20.40.2"
+    "electron-builder": "^20.40.2",
+    "jest": "^24.8.0",
+    "rimraf": "^2.6.3"
+  },
+  "update": {
+    "repositoryRootUrl": "https://api.github.com/repos/burst-apps-team/phoenix",
+    "checkIntervalMins": 1,
+    "tagPrefix": ""
+  },
+  "dependencies": {
+    "@burstjs/http": "^0.1.1",
+    "electron-dl": "^1.14.0",
+    "get-ssl-certificate": "^2.3.2",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
+    "semver": "^6.0.0",
+    "ssl-validator": "^1.0.4"
   }
 }
