--- a/lib/package.json
+++ b/lib/package.json
@@ -53,7 +53,7 @@
     "publish": "lerna run tsc && lerna publish --force-publish",
     "tsc": "lerna run tsc",
     "build": "npm run tsc",
-    "clearPackages": "rm -rf node_modules && lerna exec rm -rf node_modules"
+    "clearPackages": "lerna exec rm -rf node_modules && rm -rf node_modules"
   },
   "dependencies": {
     "axios": "^0.18.0"
