--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -26,7 +26,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "node ../../scripts/build.js --target desktop",
+    "build": "node --max-old-space-size=2048 ../../scripts/build.js --target desktop",
     "start": "cross-env NODE_ENV=develop && npm run build && electron .",
     "start:fast": "cross-env NODE_ENV=develop && electron .",
     "pack": "rimraf -rf ./release-builds && npm run build && electron-builder -p 'never' --config electron-builder.json",
