--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -13,7 +13,7 @@
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
     "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build",
-    "build:ci": "ng build --aot --source-map=false --stats-json",
+    "build:ci": "npm run build -- --aot --source-map=false --stats-json",
     "build:stats": "npm run build -- --dev --stats-json",
     "build:prod": "npm run build -- --prod",
     "build:prod-stats": "npm run build -- --prod --stats-json",
