--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,11 @@ jobs:
       name: "Build App"
       script: './scripts/ci/build-electron.sh'
     - # parallel run
-      name: "Run BurstJS Tests"
-      script: './scripts/ci/test-burstjs.sh'
-    - # parallel run
       name: "Run Angular Tests"
       script: './scripts/ci/test-ng.sh'
+    - stage: build
+      name: "Run BurstJS Tests"
+      script: './scripts/ci/test-burstjs.sh'
     - stage: desktop-deploy
       name: "Build and Deploy Desktop App"
       script: './scripts/ci/release-desktop.sh --publish'
@@ -38,6 +38,7 @@ jobs:
 
 stages:
   - prepare
+  - build
   - name: desktop-deploy
     if: tag=~/^desktop-\d+\.\d+\.\d+/
   - name: force-deploy
