--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -26,7 +26,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 node --max-old-space-size=8192 ../../scripts/build.js --target desktop",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 node ../../scripts/build.js --target desktop",
     "start": "cross-env NODE_ENV=develop && npm run build && electron .",
     "start:fast": "cross-env NODE_ENV=develop && electron .",
     "pack": "rimraf -rf ./release-builds && npm run build && electron-builder -p 'never' --config electron-builder.json",
