--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -12,7 +12,7 @@
     "start": "ng serve --open --proxy-config proxy.config.json",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
-    "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build",
     "build:ci": "npm run build -- --aot --source-map=false --stats-json",
     "build:stats": "npm run build -- --dev --stats-json",
     "build:prod": "npm run build -- --prod",
@@ -93,6 +93,7 @@
     "@types/dragula": "^2.1.34",
     "@types/node": "~12.0.2",
     "codelyzer": "~5.0.1",
+    "cross-env": "^5.2.0",
     "electron": "^5.0.1",
     "husky": "^2.3.0",
     "jasmine-core": "~3.4.0",
