Fix/updater strengthen validation (#456)
* added fingerprint validation - now, should be almost impossible to clone the cert

* fixed execution order for lib package clearance

* manual check for update with notification in case nothing found

* refactored desktop messaging

* translations

* make husky work again

* fixed failing tests

* fixed NOENT error for release build

* increased node mem allocation

* increased node mem allocation

* adjusted desktop tagging

* still more mem

* changed platform label, and added more translations

* minor refactoring, undoing dev data

* more consistent code style... should introduce a linter

* mo mem?! wtf?

* check mem to analyse mem probs on ci

* linting ...

* adjust top command to work on osx

* nano refinement - ty @blankey1337

* checking build stage

* oops. reordered builds.

* shit, I need linter file here!

* try a new thing

* using env vars for configure node mem

* returning parallel jobs

--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -12,8 +12,8 @@
     "start": "ng serve --open --proxy-config proxy.config.json",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
-    "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build",
-    "build:ci": "ng build --aot --source-map=false --stats-json",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build",
+    "build:ci": "npm run build -- --aot --source-map=false --stats-json",
     "build:stats": "npm run build -- --dev --stats-json",
     "build:prod": "npm run build -- --prod",
     "build:prod-stats": "npm run build -- --prod --stats-json",
@@ -63,7 +63,6 @@
     "d3-shape": "^1.3.5",
     "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
-    "husky": "^2.3.0",
     "lodash": "4.17.11",
     "lokijs": "^1.5.6",
     "moment": "2.24.0",
@@ -94,7 +93,9 @@
     "@types/dragula": "^2.1.34",
     "@types/node": "~12.0.2",
     "codelyzer": "~5.0.1",
+    "cross-env": "^5.2.0",
     "electron": "^5.0.1",
+    "husky": "^2.3.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.8.0",
