--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -5,7 +5,7 @@
     "email": "contact@burst-coin.org"
   },
   "productName": "Phoenix BURST Wallet",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-beta.6",
   "contributors": [
     "ohager",
     "blankey1337"
@@ -26,7 +26,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "node ../../scripts/build.js --target desktop",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 node ../../scripts/build.js --target desktop",
     "start": "cross-env NODE_ENV=develop && npm run build && electron .",
     "start:fast": "cross-env NODE_ENV=develop && electron .",
     "pack": "rimraf -rf ./release-builds && npm run build && electron-builder -p 'never' --config electron-builder.json",
@@ -49,8 +49,9 @@
   },
   "update": {
     "repositoryRootUrl": "https://api.github.com/repos/burst-apps-team/phoenix",
-    "checkIntervalMins": 1,
-    "tagPrefix": ""
+    "certFingerprint": "31:11:50:0C:4A:66:01:2C:DA:E3:33:EC:3F:CA:1C:9D:DE:45:C9:54:44:0E:7E:E4:13:71:6B:FF:36:63:C0:74",
+    "checkIntervalMins": 10,
+    "tagPrefix": "desktop-"
   },
   "dependencies": {
     "@burstjs/http": "^0.1.1",
