--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "burstjs",
-  "version": "0.1.0-rc.3",
+  "version": "0.1.2",
   "description": "BurstCoin Reference Library",
   "contributors": [
     "ohager",
