--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -25,20 +25,19 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "1.0.0-beta.5",
-    "@angular/animations": "^7.2.0",
+    "@angular/animations": "^8.0.0",
     "@angular/cdk": "^7.2.1",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
     "@angular/flex-layout": "7.0.0-beta.19",
-    "@angular/forms": "^7.2.0",
+    "@angular/forms": "^8.0.0",
     "@angular/http": "^7.2.0",
     "@angular/material": "^7.2.1",
     "@angular/material-moment-adapter": "^7.2.1",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
     "@briebug/jest": "^1.3.1",
     "@briebug/jest-schematic": "^1.7.0",
     "@ngrx/effects": "7.0.0",
@@ -83,13 +82,13 @@
     "semver": "^6.0.0",
     "time-ago-pipe": "^1.3.2",
     "web-animations-js": "2.3.1",
-    "zone.js": "0.8.29"
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "~7.2.15",
+    "@angular-devkit/build-angular": "^0.800.1",
+    "@angular/cli": "^8.0.1",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "~8.0.0",
     "@angularclass/hmr": "^2.1.3",
     "@types/dragula": "^2.1.34",
     "@types/node": "~12.0.2",
@@ -104,6 +103,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.1.0",
     "tslint": "~5.17.0",
-    "typescript": "^3.1.6"
+    "typescript": "3.4.5"
   }
 }
