chore(app): update angular, step 3

--- a/web/angular-wallet/src/tsconfig.app.json
+++ b/web/angular-wallet/src/tsconfig.app.json
@@ -2,11 +2,12 @@
     "extends": "../tsconfig.json",
     "compilerOptions": {
         "outDir": "../out-tsc/app",
-        "module": "es2015"
+        "module": "esnext"
     },
     "include": [
       "**/*.ts",
-      "../../../lib/**/*.ts"
+      "../../../lib/**/*.ts",
+      "*.ts"
     ],
     "exclude": [
       "test.ts",
