--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -26,15 +26,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.0",
-    "@angular/cdk": "^7.2.1",
+    "@angular/cdk": "^8.0.0",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
-    "@angular/flex-layout": "7.0.0-beta.19",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "^8.0.0",
     "@angular/http": "^7.2.0",
-    "@angular/material": "^7.2.1",
-    "@angular/material-moment-adapter": "^7.2.1",
+    "@angular/material": "^8.0.0",
+    "@angular/material-moment-adapter": "^8.0.0",
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
