Feature/burstjs/contract api (#521)
* introduce getContract for new Contract API

* Added getContractsByAccount

* added contract api to composeApi

* added e2e test - works ;)

* adjusted imports

* added one more test

--- a/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
+++ b/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
@@ -25,3 +25,8 @@ TEST_TRANSACTION_ID=
 # A test encrypted message
 TEST_ENCRYPTED_MESSAGE_TRANSACTION_ID=
 
+# The contract creator id
+TEST_CONTRACT_CREATOR_ID=
+
+# A test contract
+TEST_CONTRACT_ID=
