--- a/lib/packages/util/package.json
+++ b/lib/packages/util/package.json
@@ -37,7 +37,8 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^24.0.12"
+    "@types/jest": "^24.0.12",
+    "bili": "^4.8.0"
   },
   "scripts": {
     "test": "jest",
