--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -31,7 +31,9 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^24.0.12"
+    "@types/jest": "^24.0.12",
+    "bili": "^4.8.0",
+    "rollup-plugin-commonjs": "^10.0.0"
   },
   "scripts": {
     "test": "jest",
