--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -32,7 +32,9 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.12",
-    "dotenv": "^8.0.0"
+    "bili": "^4.8.0",
+    "dotenv": "^8.0.0",
+    "rollup-plugin-commonjs": "^10.0.0"
   },
   "scripts": {
     "test": "jest",
