adjusting gitignore (dists without typings)

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -1,4 +1,7 @@
 # Created by .ignore support plugin (hsz.mobi)
 
 .rpt2_cache
-
+packages/core/dist/**/*.d.ts
+packages/util/dist/**/*.d.ts
+packages/http/dist/**/*.d.ts
+packages/crypto/dist/src
