--- a/lib/package.json
+++ b/lib/package.json
@@ -50,9 +50,9 @@
     "doc": "typedoc --options tsdoc.json --listInvalidSymbolLinks",
     "bootstrap": "lerna bootstrap && lerna exec npm install && lerna run tsc",
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped",
-    "publish": "lerna run tsc && lerna publish --force-publish",
+    "publish": "npm run build && lerna publish --force-publish",
     "tsc": "lerna run tsc",
-    "build": "npm run tsc",
+    "build": "npm run tsc && lerna exec npm run bundle",
     "clearPackages": "lerna exec rm -rf node_modules && rm -rf node_modules"
   },
   "dependencies": {
