--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -34,11 +34,14 @@
     "@types/jest": "^24.0.12",
     "bili": "^4.8.0",
     "dotenv": "^8.0.0",
-    "rollup-plugin-commonjs": "^10.0.0"
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^5.0.1"
   },
   "scripts": {
     "test": "jest",
     "tsc": "tsc",
+    "bundle": "bili",
     "doc": "./node_modules/.bin/esdoc",
     "readme": "jsdoc2md  --files ./src/api/**/*.ts ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
