--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -39,6 +39,7 @@
   "scripts": {
     "test": "jest",
     "tsc": "tsc",
+    "bundle": "bili",
     "doc": "./node_modules/.bin/esdoc",
     "readme": "jsdoc2md  --files ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
