--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -36,7 +36,8 @@
     "dotenv": "^8.0.0",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^5.0.1"
+    "rollup-plugin-node-resolve": "^5.0.1",
+    "rollup-plugin-typescript2": "^0.21.1"
   },
   "scripts": {
     "test": "jest",
