--- a/lib/packages/crypto/package.json
+++ b/lib/packages/crypto/package.json
@@ -33,7 +33,8 @@
   "devDependencies": {
     "@types/jest": "^24.0.12",
     "bili": "^4.8.0",
-    "rollup-plugin-commonjs": "^10.0.0"
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-typescript2": "^0.21.1"
   },
   "scripts": {
     "test": "jest",
