--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -34,7 +34,8 @@
     "@types/jest": "^24.0.12",
     "bili": "^4.8.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^5.0.1"
+    "rollup-plugin-node-resolve": "^5.0.1",
+    "rollup-plugin-typescript2": "^0.21.1"
   },
   "scripts": {
     "test": "jest",
