--- a/lib/packages/util/package.json
+++ b/lib/packages/util/package.json
@@ -38,7 +38,8 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.12",
-    "bili": "^4.8.0"
+    "bili": "^4.8.0",
+    "rollup-plugin-typescript2": "^0.21.1"
   },
   "scripts": {
     "test": "jest",
