fixed #523 - tx amounts in table on dashboard colored correctly

--- a/web/angular-wallet/src/tsconfig.app.json
+++ b/web/angular-wallet/src/tsconfig.app.json
@@ -13,6 +13,7 @@
       "test.ts",
       "**/*.spec.ts",
       "../../../lib/**/*.spec.ts",
-      "../../../lib/**/__tests__/**/*.ts"
+      "../../../lib/**/__tests__/**/*.ts",
+      "../../../lib/**/dist/**/*.ts"
     ]
 }
