--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -44,7 +44,7 @@
     "tsc": "tsc",
     "bundle": "bili",
     "doc": "./node_modules/.bin/esdoc",
-    "readme": "jsdoc2md  --files ./src/api/**/*.ts ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
+    "readme": "jsdoc2md  --files ./src/**/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
     "@burstjs/crypto": "^0.1.3",
