--- a/lib/package.json
+++ b/lib/package.json
@@ -48,6 +48,7 @@
     "test:ci": "jest --coverage && codecov",
     "test:e2e": "jest --config jest.config.e2e.js --runInBand --detectOpenHandles --forceExit",
     "doc": "typedoc --options tsdoc.json --listInvalidSymbolLinks",
+    "readme": "lerna exec 'npm run readme'",
     "bootstrap": "lerna bootstrap && lerna exec npm install && lerna run tsc",
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped",
     "publish": "npm run build && lerna publish --force-publish",
