--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -20,6 +20,7 @@
   "exclude": [
     "node_modules",
     "**/*.spec.ts",
-    "**/__tests__/**/*"
+    "**/__tests__/**/*",
+    "**/dist/**/*"
   ]
 }
