--- a/mobile/package.json
+++ b/mobile/package.json
@@ -40,6 +40,7 @@
     "react-native-gesture-handler": "^1.2.1",
     "react-native-keychain": "^3.1.3",
     "react-native-localize": "^1.1.2",
+    "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
