--- a/lib/package.json
+++ b/lib/package.json
@@ -1,10 +1,10 @@
 {
   "name": "burstjs",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "BurstCoin Reference Library",
   "contributors": [
     "ohager",
-    "blankey"
+    "blankey1337"
   ],
   "repository": {
     "type": "git",
@@ -49,7 +49,7 @@
     "test:e2e": "jest --config jest.config.e2e.js --runInBand --detectOpenHandles --forceExit",
     "doc": "typedoc --options tsdoc.json --listInvalidSymbolLinks",
     "readme": "lerna exec 'npm run readme'",
-    "bootstrap": "lerna bootstrap && lerna exec npm install && lerna run tsc",
+    "bootstrap": "lerna exec npm install && lerna bootstrap && lerna run tsc",
     "lint": "tslint -p tsconfig.json -t stylish -s node_modules/custom-tslint-formatters/formatters -t grouped",
     "publish": "npm run build && lerna publish --force-publish",
     "tsc": "lerna run tsc",
