--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -61,8 +61,9 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "semver": "^6.1.1",
+    "snyk": "^1.170.0",
     "ssl-validator": "^1.0.4",
-    "snyk": "^1.170.0"
+    "winston": "^3.2.1"
   },
   "snyk": true
 }
