--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -4,7 +4,8 @@
   "license": "GPL-3.0",
   "contributors": [
     "ohager",
-    "blankey1337"
+    "blankey1337",
+    "harry1453"
   ],
   "scripts": {
     "bump-version": "node ../../scripts/version.js --target ng",
@@ -41,6 +42,9 @@
     "@angular/router": "^8.0.0",
     "@briebug/jest": "^1.3.1",
     "@briebug/jest-schematic": "^1.7.0",
+    "@ledgerhq/hw-transport": "^4.63.2",
+    "@ledgerhq/hw-transport-node-hid": "^4.63.2",
+    "@ledgerhq/hw-transport-webusb": "^4.63.2",
     "@ngrx/effects": "7.0.0",
     "@ngrx/router-store": "7.0.0",
     "@ngrx/store": "7.0.0",
@@ -56,6 +60,7 @@
     "angular-in-memory-web-api": "0.8.0",
     "angular-notifier": "^4.1.1",
     "bn.js": "^4.11.8",
+    "buffer": "^5.2.1",
     "chart.js": "2.8.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.6.9",
@@ -78,6 +83,7 @@
     "particles.js": "^2.0.0",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.16.0",
+    "regenerator-runtime": "^0.13.2",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.5.2",
     "semver": "^6.1.1",
