--- a/mobile/package.json
+++ b/mobile/package.json
@@ -42,6 +42,7 @@
     "react-native-localize": "^1.1.2",
     "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
+    "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
@@ -62,6 +63,7 @@
     "@types/react-native": "^0.57.57",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-touch-id": "^4.0.1",
+    "@types/react-native-vector-icons": "^6.4.1",
     "@types/react-navigation": "^3.0.7",
     "@types/react-redux": "^7.0.9",
     "@types/react-test-renderer": "^16.8.1",
