feat(ledger): split desktop and web services

--- a/web/angular-wallet/angular.json
+++ b/web/angular-wallet/angular.json
@@ -58,6 +58,35 @@
                                 }
                             ]
                         },
+                        "desktop": {
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.prod.ts"
+                                },
+
+                                {
+                                    "replace": "src/app/ledger/ledger.service.ts",
+                                    "with": "src/app/ledger/ledger.service.desktop.ts"
+                                }
+                            ],
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "extractCss": true,
+                            "namedChunks": false,
+                            "aot": true,
+                            "extractLicenses": true,
+                            "vendorChunk": false,
+                            "buildOptimizer": true,
+                            "budgets": [
+                                {
+                                    "type": "initial",
+                                    "maximumWarning": "2mb",
+                                    "maximumError": "5mb"
+                                }
+                            ]
+                        },
                         "web": {
                             "fileReplacements": [
                                 {
