--- a/web/angular-wallet/proxy.config.json
+++ b/web/angular-wallet/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/burst": {
-    "target": "https://wallet1.burst-team.us:2083",
+    "target": "http://testnet.burstcoin.network:6876",
     "changeOrigin": true,
     "secure": false,
     "logLevel": "info"
