remove cached node_modules for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
 
 cache:
   directories:
-    - node_modules
+    # - node_modules
     - "$HOME/.cache/electron"
     - "$HOME/.cache/electron-builder"
 
