--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -58,6 +58,7 @@
     "@burstjs/http": "^0.1.2",
     "@ledgerhq/hw-transport": "^4.63.2",
     "@ledgerhq/hw-transport-node-hid": "^4.63.2",
+    "cross-spawn": "^6.0.5",
     "electron-dl": "^1.14.0",
     "get-ssl-certificate": "^2.3.2",
     "js-yaml": "^3.13.1",
@@ -66,6 +67,7 @@
     "regenerator-runtime": "^0.13.2",
     "semver": "^6.1.1",
     "snyk": "^1.170.0",
+    "usb": "^1.6.0",
     "winston": "^3.2.1"
   },
   "snyk": true
