--- a/mobile/.env.production
+++ b/mobile/.env.production
@@ -5,3 +5,5 @@ DEFAULT_PASSCODE_TIME="600000"
 
 DEFAULT_NODE_HOST="https://wallet1.burst-team.us:2083"
 DEFAULT_API_ROOT_URL="/burst"
+
+CMC_HOST_URL="https://api.coinmarketcap.com/v1/ticker/burst/"
