Account details screen with transactions

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,7 +21,8 @@
     "dev": "npm run dev:ios",
     "dev:ios": "react-native run-ios --simulator=\"iPhone SE\"",
     "dev:android": "react-native run-android",
-    "init": "npm install && react-native link",
+    "init": "npm install && npm run link",
+    "link": "react-native link",
     "lint": "tslint --fix --project tsconfig.json 'src/**/*.{ts,tsx}'",
     "lint:staged": "tslint --fix --project tsconfig.json",
     "start": "node ./node_modules/react-scripts/bin/react-scripts.js start",
