--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-svg')
     implementation project(':react-native-touch-id')
     implementation project(':react-native-localize')
     implementation project(':react-native-keychain')
