--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "phoenix-burst-mobile-wallet",
   "version": "0.1.0",
   "contributors": [
     "titanishu",
@@ -45,9 +45,9 @@
     "react-native-gesture-handler": "^1.2.1",
     "react-native-keychain": "^3.1.3",
     "react-native-localize": "^1.1.2",
+    "react-native-picker-select": "^6.3.2",
     "react-native-svg": "^9.8.3",
     "react-native-svg-charts": "^5.3.0",
-    "react-native-picker-select": "^6.3.2",
     "react-native-swipeout": "^2.3.6",
     "react-native-touch-id": "^4.4.1",
     "react-navigation": "^3.11.0",
