--- a/lib/package.json
+++ b/lib/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": ">=10"
   },
-  "license": "GPL-3.0",
+  "license": "Apache-2.0",
   "private": false,
   "devDependencies": {
     "@babel/cli": "^7.2.3",
