feat(chart): add USD as an option to the chart

--- a/mobile/.env
+++ b/mobile/.env
@@ -7,4 +7,4 @@ DEFAULT_NODE_HOST="https://wallet1.burst-team.us:2083"
 DEFAULT_API_ROOT_URL="/burst"
 
 CMC_HOST_URL="https://api.coinmarketcap.com/v1/ticker/burst/"
-CRYPTOCOMPARE_HOST_URL="https://min-api.cryptocompare.com/data/histoday?fsym=BURST&tsym=BTC&limit=100"
+CRYPTOCOMPARE_HOST_URL="https://min-api.cryptocompare.com/data/histoday?fsym=BURST&tsym=$SYMBOL&limit=100"
