--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -5,10 +5,12 @@
     "email": "contact@burst-coin.org"
   },
   "productName": "Phoenix BURST Wallet",
-  "version": "1.0.0-beta.9",
+  "version": "1.0.0-beta.10",
   "contributors": [
     "ohager",
-    "blankey1337"
+    "blankey1337",
+    "jjos",
+    "shefass"
   ],
   "repository": {
     "type": "git",
