--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -1,10 +1,12 @@
 {
   "name": "phoenix-angular-web-wallet",
-  "version": "1.0.0-beta.9",
+  "version": "1.0.0-beta.10",
   "license": "GPL-3.0",
   "contributors": [
     "ohager",
-    "blankey1337"
+    "blankey1337",
+    "jjos",
+    "shefass"
   ],
   "scripts": {
     "bump-version": "node ../../scripts/version.js --target ng",
