--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -1,10 +1,12 @@
 {
   "name": "phoenix-angular-web-wallet",
-  "version": "1.0.0-beta.9",
+  "version": "1.0.0-beta.10",
   "license": "GPL-3.0",
   "contributors": [
     "ohager",
-    "blankey1337"
+    "blankey1337",
+    "jjos",
+    "shefass"
   ],
   "scripts": {
     "bump-version": "node ../../scripts/version.js --target ng",
@@ -59,6 +61,7 @@
     "chart.js": "2.8.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.6.9",
+    "csv-parse": "^4.4.5",
     "d3": "5.9.7",
     "d3-shape": "^1.3.5",
     "date-fns": "^1.30.1",
