--- a/mobile/ios/mobile/Info.plist
+++ b/mobile/ios/mobile/Info.plist
@@ -34,7 +34,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -63,7 +63,7 @@
 				<true/>
 			</dict>
 			<key>New item</key>
-			<string></string>
+			<string/>
 		</dict>
 	</dict>
 	<key>UIAppFonts</key>
@@ -76,5 +76,7 @@
 		<string>BebasNeueBold.ttf</string>
 		<string>NotoSansThin.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera is needed for scanning QR codes</string>
 </dict>
 </plist>
