--- a/mobile/package.json
+++ b/mobile/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.13",
     "react": "16.8.3",
     "react-native": "^0.59.8",
+    "react-native-camera": "^3.6.0",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-keychain": "^3.1.3",
     "react-native-localize": "^1.1.2",
