feat(desktop): add support for zil domains

--- a/web/angular-wallet/src/tsconfig.spec.json
+++ b/web/angular-wallet/src/tsconfig.spec.json
@@ -10,7 +10,8 @@
   },
   "files": [
     "test.ts",
-    "polyfills.ts"
+    "polyfills.ts",
+    "empty.ts"
   ],
   "include": [
     "**/*.spec.ts",
