--- a/web/angular-wallet/angular.json
+++ b/web/angular-wallet/angular.json
@@ -15,8 +15,11 @@
             },
             "architect": {
                 "build": {
-                    "builder": "@angular-devkit/build-angular:browser",
+                    "builder": "@angular-builders/custom-webpack:browser",
                     "options": {
+                        "customWebpackConfig": {
+                            "path": "./extra-webpack.config.js"
+                        },
                         "outputPath": "dist",
                         "index": "src/index.html",
                         "main": "src/main.ts",
@@ -97,8 +100,11 @@
                     }
                 },
                 "serve": {
-                    "builder": "@angular-devkit/build-angular:dev-server",
+                    "builder": "@angular-builders/custom-webpack:dev-server",
                     "options": {
+                        "customWebpackConfig": {
+                            "path": "./extra-webpack.config.js"
+                        },
                         "browserTarget": "fuse:build"
                     },
                     "configurations": {
