--- a/web/angular-wallet/tsconfig.json
+++ b/web/angular-wallet/tsconfig.json
@@ -9,9 +9,14 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@fuse": ["@fuse/"],
-      "@burstjs/*": ["../../../lib/packages/*"]
+      "@burstjs/*": ["../../../lib/packages/*"],
+      "os": ["src/empty.ts"],
+      "http": ["src/empty.ts"],
+      "stream": ["src/empty.ts"],
+      "crypto": ["src/empty.ts"]
     },
     "target": "es5",
     "typeRoots": [
