chore(desktop): clean up

--- a/web/angular-wallet/src/tsconfig.spec.json
+++ b/web/angular-wallet/src/tsconfig.spec.json
@@ -10,8 +10,7 @@
   },
   "files": [
     "test.ts",
-    "polyfills.ts",
-    "empty.ts"
+    "polyfills.ts"
   ],
   "include": [
     "**/*.spec.ts",
