--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -21,6 +21,7 @@
     "build:web": "npm run build -- --configuration=web",
     "build:prod-stats": "npm run build -- --prod --stats-json",
     "test": "jest",
+    "postinstall": "rn-nodeify --install --hack",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json",
@@ -70,7 +71,7 @@
     "lodash": "4.17.15",
     "lokijs": "^1.5.6",
     "moment": "2.24.0",
-    "namicorn": "^0.2.34",
+    "namicorn": "^0.2.38",
     "ng-mocks": "^8.1.0",
     "ng2-charts": "2.3.0",
     "ng5-slider": "^1.2.4",
