--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -150,6 +150,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-randombytes')
     implementation project(':react-native-version-number')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-camera')
