chore(web): update deps

--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -28,19 +28,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/cdk": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.0.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.15",
-    "@angular/material": "^8.0.0",
-    "@angular/material-moment-adapter": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
+    "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@briebug/jest": "^1.3.1",
     "@briebug/jest-schematic": "^1.7.0",
     "@ngrx/effects": "7.0.0",
@@ -56,19 +56,19 @@
     "@types/prismjs": "1.16.0",
     "angular-calendar": "0.27.18",
     "angular-in-memory-web-api": "0.9.0",
-    "angular-notifier": "^4.1.1",
+    "angular-notifier": "^4.1.2",
     "bn.js": "^5.0.0",
     "chart.js": "2.8.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.6.9",
-    "csv-parse": "^4.4.6",
+    "csv-parse": "^4.8.2",
     "d3": "5.9.7",
-    "d3-shape": "^1.3.5",
+    "d3-shape": "^1.3.7",
     "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
     "jsqr": "^1.2.0",
     "lodash": "4.17.15",
-    "lokijs": "^1.5.6",
+    "lokijs": "^1.5.8",
     "moment": "2.24.0",
     "ng-mocks": "^8.1.0",
     "ng2-charts": "2.3.0",
@@ -76,8 +76,8 @@
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "8.1.0",
     "ngx-cookie-service": "2.2.0",
-    "ngx-electron": "^2.1.1",
-    "ngx-mask": "^7.9.9",
+    "ngx-electron": "^2.2.0",
+    "ngx-mask": "^7.9.10",
     "particles.js": "^2.0.0",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.17.1",
@@ -90,23 +90,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.800.3",
-    "@angular/cli": "^8.2.0",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "~8.2.0",
+    "@angular/cli": "^8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@angularclass/hmr": "^2.1.3",
     "@types/dragula": "^2.1.34",
-    "@types/node": "~12.7.3",
-    "codelyzer": "~5.1.1",
-    "cross-env": "^5.2.0",
-    "electron": "^6.0.1",
-    "husky": "^3.0.5",
+    "@types/node": "^12.7.12",
+    "codelyzer": "^5.1.2",
+    "cross-env": "^5.2.1",
+    "electron": "^6.1.4",
+    "husky": "^3.0.9",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "jest": "24.9.0",
     "jest-preset-angular": "6.0.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
+    "tslint": "^5.20.1",
     "typescript": "3.4.5"
   }
 }
