test: making e2e test work for publishContract

--- a/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
+++ b/lib/packages/core/src/api/__tests__/e2e/helpers/.env.template
@@ -33,3 +33,6 @@ TEST_CONTRACT_ID=
 
 # A test asset
 TEST_ASSET_ID=
+
+#A test contract byte code in hex format (block talk compiled)
+TEST_CONTRACT_CODE=
