feat(push): add push notification support for mobile

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services'
 
 import com.android.build.OutputFile
 
@@ -105,8 +106,8 @@ android {
         applicationId "com.burstcoin.phoenix"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 12
-        versionName "1.0.5"
+        versionCode 17
+        versionName "1.2.0"
         missingDimensionStrategy 'react-native-camera', 'general'
     }
     signingConfigs {
@@ -150,6 +151,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-push-notification')
     implementation project(':react-native-version-number')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-camera')
