--- a/mobile/.env.production
+++ b/mobile/.env.production
@@ -8,3 +8,5 @@ DEFAULT_API_ROOT_URL="/burst"
 
 CMC_HOST_URL="https://api.coinmarketcap.com/v1/ticker/burst/"
 CRYPTOCOMPARE_HOST_URL="https://min-api.cryptocompare.com/data/histoday?fsym=BURST&tsym=$SYMBOL&limit=100"
+
+BURSTALERTS_HOST_URL="https://burstalerts.com/api/v1/alerts/"
