--- a/mobile/package.json
+++ b/mobile/package.json
@@ -34,6 +34,7 @@
     "@burstjs/crypto": "^0.4.1",
     "@burstjs/http": "^0.4.1",
     "@burstjs/util": "^0.4.1",
+    "@react-native-community/push-notification-ios": "^1.0.3",
     "@react-native-community/slider": "^2.0.0",
     "@types/d3-shape": "^1.3.1",
     "@types/react-native-svg-charts": "^5.0.2",
@@ -48,6 +49,7 @@
     "react-native-localize": "^1.1.2",
     "react-native-markdown-renderer": "^3.2.8",
     "react-native-picker-select": "^6.3.2",
+    "react-native-push-notification": "^3.1.9",
     "react-native-qrcode-scanner": "^1.2.3",
     "react-native-svg": "^9.8.3",
     "react-native-svg-charts": "^5.3.0",
