--- a/lib/packages/util/package.json
+++ b/lib/packages/util/package.json
@@ -56,5 +56,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "9b5a4e07616d783e85bcae6c21b72f50db783f48"
+  "gitHead": "9b5a4e07616d783e85bcae6c21b72f50db783f48",
+  "dependencies": {
+    "js-base64": "^2.5.1"
+  }
 }
