Fix/wallet/complete account creation flow (#1276)
* fix: #1275

* chore: Updated changelog

* chore: Updated changelog

* fix: prepush

* fix: prepush

* fix: prepush

* fix: prepush

* fix: prepush

--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -108,5 +108,10 @@
     "ts-node": "~8.5.4",
     "tslint": "^5.20.1",
     "typescript": "3.4.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "../../pre-push.sh"
+    }
   }
 }
